--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(simmopp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-set(SOURCE_FILES main.cpp basic_vector.hpp)
+include_directories(include)
+
+set(SOURCE_FILES src/main.cpp)
 add_executable(simmopp ${SOURCE_FILES})
