--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 include_directories(include)
 
-set(SOURCE_FILES src/main.cpp)
+set(SOURCE_FILES src/main2.cpp)
 add_executable(simmopp ${SOURCE_FILES})
