Add Google Test framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,7 @@ include_directories(include)
 
 set(SOURCE_FILES src/main3.cpp)
 add_executable(simmopp ${SOURCE_FILES})
+
+set(TEST_FILES test/test1.cpp test/main.cpp)
+add_executable(simmopp-test ${TEST_FILES})
+target_link_libraries(simmopp-test gtest gtest_main)
