--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra")
 
 include_directories(include)
 
-set(SOURCE_FILES src/main3.cpp)
-add_executable(simmopp ${SOURCE_FILES})
-
-set(TEST_FILES test/vector_test.cpp test/point_test.cpp)
-add_executable(simmopp-test ${TEST_FILES})
-target_link_libraries(simmopp-test gtest gtest_main)
+add_subdirectory(test)
