--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(simmopp_test)
 
-set(TEST_FILES vector_test.cpp point_test.cpp regex_iterator_test.cpp)
+set(TEST_FILES vector_test.cpp point_test.cpp regex_iterator_test.cpp conditional_cascade_test.cpp)
 add_executable(simmopp_test ${TEST_FILES})
 target_link_libraries(simmopp_test gtest gtest_main)
